# drone_follower

./: README.md
DroneFollower/: CMakeLists.txt  package.xml
ar_cv/: CMakeLists.txt  package.xml
ar_cv/config/: setup.yaml
ar_cv/include/ar_cv/: SimpleCV.hpp  algorithms.hpp
ar_cv/launch/: start.launch
ar_cv/msg/: CircleInfo.msg
ar_cv/scripts/: HSV_Detector.py
ar_cv/src/: SimpleCV.cpp
ar_cv/test/: MainTest.cpp
ardrone_control/: CMakeLists.txt  package.xml
ardrone_control/include/: DroneController.h
ardrone_control/include/ardrone_control/: DroneController.h
ardrone_control/src/: DroneController.cpp
ardrone_control/tests/: test.cpp
ardrone_system/: CMakeLists.txt  package.xml
ardrone_system/include/ardrone_system/: ardrone.h
ardrone_system/launch/: ardrone.launch  graph.launch  test.launch
ardrone_system/src/: ardrone.cpp  convenience.cpp  graph.cpp  test_cv.cpp
control/src/: DroneController.cpp
control/tests/: test.cpp
src/control/: DroneController.h
