<?xml version="1.0"?>
<package format="2">
  <name>DroneFollower</name>
  <version>0.0.0</version>
  <description>Ar Drone follower package to tracking to ball by some control algorithm</description>

  <maintainer email="senex@todo.todo">senex</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>
